# learn-wgpu

./: .gitignore  Cargo.toml  README.md
wgpu01/: Cargo.toml
wgpu01/src/: main.rs
wgpu02/: Cargo.toml
wgpu02/src/: main.rs
wgpu03/: Cargo.toml
wgpu03/src/: main.rs  shader.wgsl
wgpu04/: Cargo.toml
wgpu04/src/: common.rs  main.rs  shader.wgsl
wgpu05/: Cargo.toml
wgpu05/src/: common.rs  main.rs  shader.wgsl
wgpu06/: Cargo.toml
wgpu06/src/: common.rs  main.rs  shader.wgsl
wgpu07/: Cargo.toml
wgpu07/src/: main.rs  transforms.rs  vertex_data.rs
wgpu08/: Cargo.toml
wgpu08/src/: main.rs  shader.wgsl  transforms.rs
wgpu09/: Cargo.toml
wgpu10/: Cargo.toml
wgpu10/src/: common.rs  main.rs
wgpu11/: Cargo.toml
wgpu11/src/: common.rs  main.rs  math_func.rs  shader.wgsl  vertex_data.rs
wgpu12/: Cargo.toml
wgpu12/src/: main.rs  math_func.rs  vertex_data.rs
