[workspace]
members = [
    "wgpu01",
    "wgpu02",
    "wgpu03",
    "wgpu04",
    "wgpu05",
    "wgpu06",
    "wgpu07",
    "wgpu08",
    "wgpu09",
    "wgpu10",
    "wgpu11",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
image = "0.25.9"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
