[package]
name = "wgpu07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
cgmath = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
