[package]
name = "wgpu11"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
cgmath = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
